--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,6 @@
 <div class="container" style="padding: 0px 25px;">
     <div class="container-mod">
-        <h1 style="font-size: 55px;
-        line-height: 106.1%;
-        text-transform: uppercase;
-        margin-bottom: 35px;
-        color: #fff; text-align: center;">
+        <h1 style="font-size: 55px; line-height: 106.1%; text-transform: uppercase;margin-bottom: 35px;color: #fff; text-align: center;">
             Bem-vindo
         </h1>
         <div style="background: #fff;text-align: center;">
